# setup.cfg
[metadata]
# Name, version, author etc. are now primarily defined in setup.py
# description-file = README.md # Keep if you want setup.cfg to also know about it

[options]
packages = find:
python_requires = >=3.8
# install_requires = # No external dependencies needed

[options.packages.find]
include = ascii_colors*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,venv* # Exclude venv
# Ignore F401 (unused import) in __init__.py as classes/enums are imported for export
# Ignore E501 (line too long) occasionally if needed for readability (though strive for <100)
per-file-ignores =
    ascii_colors/__init__.py: F401
    # tests/test_ascii_colors.py: E501 # Example if test lines get long

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
# Strict type checking options (can be demanding)
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False # Be pragmatic with decorators if needed
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
# Exclude untyped 3rd party libraries if necessary
# follow_imports = silent

# Relax rules for test files if needed
[mypy-tests.*]
disallow_untyped_defs = False
check_untyped_defs = False
disallow_incomplete_defs = False

# Ignore missing imports for standard library modules if mypy struggles
[mypy-sys.*]
ignore_missing_imports = True
[mypy-shutil.*]
ignore_missing_imports = True
[mypy-inspect.*]
ignore_missing_imports = True
[mypy-json.*]
ignore_missing_imports = True
[mypy-traceback.*]
ignore_missing_imports = True